# PhotoEditor

./: README.en.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: inpainting.h  native-lib.cpp
app/src/main/java/com/dlut/iiauapp/: CommonNative.java  InpaintingNative.java
app/src/main/java/com/dlut/test/: MainActivity.java
app/src/main/java/com/ninelock/editor/photo/: App.java
app/src/main/java/com/ninelock/editor/photo/config/: GlideEngine.java  GlobalGlideModule.java
app/src/main/java/com/ninelock/editor/photo/jna/: IiauApp.java
app/src/main/java/com/ninelock/editor/photo/jni/: IiauApp.java
app/src/main/java/com/ninelock/editor/photo/utils/: AssetsUtils.java  BitmapUtils.java  FileUtils.java  ImageUtils.java
app/src/main/java/com/ninelock/editor/photo/views/: MainActivity.java
app/src/main/res/drawable/: arrows_left_black.xml  doodle_seekbar_background.xml  ic_bottom_toolbox.xml  ic_icons8_compare_btn.xml  ic_icons8_erase_btn.xml  ic_icons8_eraser_btn.xml  ic_icons8_move_btn.xml  ic_icons8_re_erase_btn.xml  icons8_compare.xml  icons8_compare_checked.xml  icons8_erase.xml  icons8_erase_checked.xml  icons8_move.xml  icons8_move_checked.xml  icons8_re_erase.xml  icons8_re_erase_checked.xml  icons8_redo.xml  icons8_refresh.xml  icons8_undo.xml  ps_white_preview_selector.xml
app/src/main/res/layout/: activity_debug.xml  activity_editor_erase_pen.xml  activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
(+23 files in other folders)
